# cudd-sandbox

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md
include/cudd-sandbox/: cudd-sandbox.hpp  pla_file.hpp  reorder.hpp  sop.hpp  utils.hpp
lib/: CMakeLists.txt  pla_file.cpp  reorder.cpp  utils.cpp
tools/: CMakeLists.txt
tools/cudd-sandbox-cli/: CMakeLists.txt  cli.cpp
